# spmp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
inc/: sgp.h
lib/: CMakeLists.txt
src/: sgp.c  sgp.cpp
test/: CMakeLists.txt  sgp_test.cpp  tle_data.h
